Wrap up routing fix work.

--- a/src/scss/presences/shared/material/porcelain/style.scss
+++ b/src/scss/presences/shared/material/porcelain/style.scss
@@ -10,7 +10,7 @@
 // .porcelainLightest { fill: hsl(190, 28%, 97%); }
 
 .darkRoom .darkRoom#{$suffix} {
-    .porcelainDarkest { fill: hsl(190, 11%, 34%); }
-    .porcelainMediumLight { fill: hsl(190, 11%, 51%); }
-    .porcelainLight { fill: hsl(190, 11%, 54%); }
+    .porcelainDarkest { fill: hsl(190, 7%, 34%); }
+    .porcelainMediumLight { fill: hsl(190, 7%, 51%); }
+    .porcelainLight { fill: hsl(190, 7%, 54%); }
 }
